gen/PequePatitoParser.py
# Generated from C:/Users/andre/PycharmProjects/littleDuck/PequePatito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PequePatitoParser ( Parser ):

    grammarFileName = "PequePatito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'programa'", "'inicio'", "'fin'", "'vars'", 
                     "'si'", "'sino'", "'mientras'", "'haz'", "'nula'", 
                     "'entero'", "'flotante'", "'escribe'", "'+'", "'-'", 
                     "'*'", "'/'", "'>'", "'<'", "'=='", "'!='", "'('", 
                     "')'", "'{'", "'}'", "';'", "','", "':'", "'='", "'['", 
                     "']'" ]

    symbolicNames = [ "<INVALID>", "PROGRAMA", "INICIO", "FIN", "VARS", 
                      "SI", "SINO", "MIETRAS", "HAZ", "NULA", "ENT", "FLOT", 
                      "IMPRIME", "SUMA", "RESTA", "MULTIPLICACION", "DIVISION", 
                      "MAYOR", "MENOR", "IGUAL", "DIFERENTE", "PARENTESIS_IZQ", 
                      "PARENTESIS_DER", "LLAVE_IZQ", "LLAVE_DER", "PUNTO_Y_COMA", 
                      "COMA", "DOS_PUNTOS", "ASIGNACION", "BRACKET_IZQ", 
                      "BRACKET_DER", "CTE_ENT", "CTE_FLOT", "LETRERO", "ID", 
                      "WS" ]

    RULE_programa = 0
    RULE_p = 1
    RULE_v = 2
    RULE_f = 3
    RULE_vars = 4
    RULE_var_declaracion = 5
    RULE_id_list = 6
    RULE_vars_list = 7
    RULE_funcs = 8
    RULE_params = 9
    RULE_cuerpo = 10
    RULE_estatutos = 11
    RULE_estatuto = 12
    RULE_asigna = 13
    RULE_imprime = 14
    RULE_p_imp = 15
    RULE_condicion = 16
    RULE_else_part = 17
    RULE_ciclo = 18
    RULE_llamada = 19
    RULE_expresion = 20
    RULE_exp = 21
    RULE_termino = 22
    RULE_bo = 23
    RULE_factor = 24
    RULE_f_otro = 25
    RULE_tipo = 26
    RULE_cte = 27

    ruleNames =  [ "programa", "p", "v", "f", "vars", "var_declaracion", 
                   "id_list", "vars_list", "funcs", "params", "cuerpo", 
                   "estatutos", "estatuto", "asigna", "imprime", "p_imp", 
                   "condicion", "else_part", "ciclo", "llamada", "expresion", 
                   "exp", "termino", "bo", "factor", "f_otro", "tipo", "cte" ]

    EOF = Token.EOF
    PROGRAMA=1
    INICIO=2
    FIN=3
    VARS=4
    SI=5
    SINO=6
    MIETRAS=7
    HAZ=8
    NULA=9
    ENT=10
    FLOT=11
    IMPRIME=12
    SUMA=13
    RESTA=14
    MULTIPLICACION=15
    DIVISION=16
    MAYOR=17
    MENOR=18
    IGUAL=19
    DIFERENTE=20
    PARENTESIS_IZQ=21
    PARENTESIS_DER=22
    LLAVE_IZQ=23
    LLAVE_DER=24
    PUNTO_Y_COMA=25
    COMA=26
    DOS_PUNTOS=27
    ASIGNACION=28
    BRACKET_IZQ=29
    BRACKET_DER=30
    CTE_ENT=31
    CTE_FLOT=32
    LETRERO=33
    ID=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def p(self):
            return self.getTypedRuleContext(PequePatitoParser.PContext,0)


        def v(self):
            return self.getTypedRuleContext(PequePatitoParser.VContext,0)


        def f(self):
            return self.getTypedRuleContext(PequePatitoParser.FContext,0)


        def INICIO(self):
            return self.getToken(PequePatitoParser.INICIO, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PequePatitoParser.CuerpoContext,0)


        def FIN(self):
            return self.getToken(PequePatitoParser.FIN, 0)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PequePatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.p()
            self.state = 57
            self.v()
            self.state = 58
            self.f()
            self.state = 59
            self.match(PequePatitoParser.INICIO)
            self.state = 60
            self.cuerpo()
            self.state = 61
            self.match(PequePatitoParser.FIN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAMA(self):
            return self.getToken(PequePatitoParser.PROGRAMA, 0)

        def ID(self):
            return self.getToken(PequePatitoParser.ID, 0)

        def PUNTO_Y_COMA(self):
            return self.getToken(PequePatitoParser.PUNTO_Y_COMA, 0)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterP" ):
                listener.enterP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitP" ):
                listener.exitP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitP" ):
                return visitor.visitP(self)
            else:
                return visitor.visitChildren(self)




    def p(self):

        localctx = PequePatitoParser.PContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(PequePatitoParser.PROGRAMA)
            self.state = 64
            self.match(PequePatitoParser.ID)
            self.state = 65
            self.match(PequePatitoParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(PequePatitoParser.VARS, 0)

        def var_declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.Var_declaracionContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.Var_declaracionContext,i)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_v

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterV" ):
                listener.enterV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitV" ):
                listener.exitV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitV" ):
                return visitor.visitV(self)
            else:
                return visitor.visitChildren(self)




    def v(self):

        localctx = PequePatitoParser.VContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_v)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self.match(PequePatitoParser.VARS)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 68
                self.var_declaracion()
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.FuncsContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.FuncsContext,i)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_f

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterF" ):
                listener.enterF(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitF" ):
                listener.exitF(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitF" ):
                return visitor.visitF(self)
            else:
                return visitor.visitChildren(self)




    def f(self):

        localctx = PequePatitoParser.FContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_f)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==9:
                self.state = 74
                self.funcs()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARS(self):
            return self.getToken(PequePatitoParser.VARS, 0)

        def var_declaracion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.Var_declaracionContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.Var_declaracionContext,i)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = PequePatitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_vars)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(PequePatitoParser.VARS)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 81
                self.var_declaracion()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declaracionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(PequePatitoParser.Id_listContext,0)


        def DOS_PUNTOS(self):
            return self.getToken(PequePatitoParser.DOS_PUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(PequePatitoParser.TipoContext,0)


        def PUNTO_Y_COMA(self):
            return self.getToken(PequePatitoParser.PUNTO_Y_COMA, 0)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_var_declaracion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaracion" ):
                listener.enterVar_declaracion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaracion" ):
                listener.exitVar_declaracion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaracion" ):
                return visitor.visitVar_declaracion(self)
            else:
                return visitor.visitChildren(self)




    def var_declaracion(self):

        localctx = PequePatitoParser.Var_declaracionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_declaracion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.id_list()
            self.state = 88
            self.match(PequePatitoParser.DOS_PUNTOS)
            self.state = 89
            self.tipo()
            self.state = 90
            self.match(PequePatitoParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.ID)
            else:
                return self.getToken(PequePatitoParser.ID, i)

        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.COMA)
            else:
                return self.getToken(PequePatitoParser.COMA, i)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = PequePatitoParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PequePatitoParser.ID)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==26:
                self.state = 93
                self.match(PequePatitoParser.COMA)
                self.state = 94
                self.match(PequePatitoParser.ID)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.Id_listContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.Id_listContext,i)


        def DOS_PUNTOS(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.DOS_PUNTOS)
            else:
                return self.getToken(PequePatitoParser.DOS_PUNTOS, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.TipoContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.TipoContext,i)


        def PUNTO_Y_COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.PUNTO_Y_COMA)
            else:
                return self.getToken(PequePatitoParser.PUNTO_Y_COMA, i)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_vars_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_list" ):
                listener.enterVars_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_list" ):
                listener.exitVars_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_list" ):
                return visitor.visitVars_list(self)
            else:
                return visitor.visitChildren(self)




    def vars_list(self):

        localctx = PequePatitoParser.Vars_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vars_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 100
                self.id_list()
                self.state = 101
                self.match(PequePatitoParser.DOS_PUNTOS)
                self.state = 102
                self.tipo()
                self.state = 103
                self.match(PequePatitoParser.PUNTO_Y_COMA)
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NULA(self):
            return self.getToken(PequePatitoParser.NULA, 0)

        def ID(self):
            return self.getToken(PequePatitoParser.ID, 0)

        def PARENTESIS_IZQ(self):
            return self.getToken(PequePatitoParser.PARENTESIS_IZQ, 0)

        def PARENTESIS_DER(self):
            return self.getToken(PequePatitoParser.PARENTESIS_DER, 0)

        def LLAVE_IZQ(self):
            return self.getToken(PequePatitoParser.LLAVE_IZQ, 0)

        def cuerpo(self):
            return self.getTypedRuleContext(PequePatitoParser.CuerpoContext,0)


        def LLAVE_DER(self):
            return self.getToken(PequePatitoParser.LLAVE_DER, 0)

        def PUNTO_Y_COMA(self):
            return self.getToken(PequePatitoParser.PUNTO_Y_COMA, 0)

        def params(self):
            return self.getTypedRuleContext(PequePatitoParser.ParamsContext,0)


        def vars_(self):
            return self.getTypedRuleContext(PequePatitoParser.VarsContext,0)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs" ):
                return visitor.visitFuncs(self)
            else:
                return visitor.visitChildren(self)




    def funcs(self):

        localctx = PequePatitoParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_funcs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(PequePatitoParser.NULA)
            self.state = 111
            self.match(PequePatitoParser.ID)
            self.state = 112
            self.match(PequePatitoParser.PARENTESIS_IZQ)
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 113
                self.params()


            self.state = 116
            self.match(PequePatitoParser.PARENTESIS_DER)
            self.state = 117
            self.match(PequePatitoParser.LLAVE_IZQ)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 118
                self.vars_()


            self.state = 121
            self.cuerpo()
            self.state = 122
            self.match(PequePatitoParser.LLAVE_DER)
            self.state = 123
            self.match(PequePatitoParser.PUNTO_Y_COMA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.ID)
            else:
                return self.getToken(PequePatitoParser.ID, i)

        def DOS_PUNTOS(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.DOS_PUNTOS)
            else:
                return self.getToken(PequePatitoParser.DOS_PUNTOS, i)

        def tipo(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.TipoContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.TipoContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(PequePatitoParser.COMA)
            else:
                return self.getToken(PequePatitoParser.COMA, i)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = PequePatitoParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 138
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                self.enterOuterAlt(localctx, 1)
                self.state = 125
                self.match(PequePatitoParser.ID)
                self.state = 126
                self.match(PequePatitoParser.DOS_PUNTOS)
                self.state = 127
                self.tipo()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==26:
                    self.state = 128
                    self.match(PequePatitoParser.COMA)
                    self.state = 129
                    self.match(PequePatitoParser.ID)
                    self.state = 130
                    self.match(PequePatitoParser.DOS_PUNTOS)
                    self.state = 131
                    self.tipo()
                    self.state = 136
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CuerpoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LLAVE_IZQ(self):
            return self.getToken(PequePatitoParser.LLAVE_IZQ, 0)

        def estatutos(self):
            return self.getTypedRuleContext(PequePatitoParser.EstatutosContext,0)


        def LLAVE_DER(self):
            return self.getToken(PequePatitoParser.LLAVE_DER, 0)

        def getRuleIndex(self):
            return PequePatitoParser.RULE_cuerpo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCuerpo" ):
                listener.enterCuerpo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCuerpo" ):
                listener.exitCuerpo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCuerpo" ):
                return visitor.visitCuerpo(self)
            else:
                return visitor.visitChildren(self)




    def cuerpo(self):

        localctx = PequePatitoParser.CuerpoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_cuerpo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(PequePatitoParser.LLAVE_IZQ)
            self.state = 141
            self.estatutos()
            self.state = 142
            self.match(PequePatitoParser.LLAVE_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def estatuto(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PequePatitoParser.EstatutoContext)
            else:
                return self.getTypedRuleContext(PequePatitoParser.EstatutoContext,i)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_estatutos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatutos" ):
                listener.enterEstatutos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatutos" ):
                listener.exitEstatutos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEstatutos" ):
                return visitor.visitEstatutos(self)
            else:
                return visitor.visitChildren(self)




    def estatutos(self):

        localctx = PequePatitoParser.EstatutosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_estatutos)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179873440) != 0):
                self.state = 144
                self.estatuto()
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EstatutoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def asigna(self):
            return self.getTypedRuleContext(PequePatitoParser.AsignaContext,0)


        def condicion(self):
            return self.getTypedRuleContext(PequePatitoParser.CondicionContext,0)


        def ciclo(self):
            return self.getTypedRuleContext(PequePatitoParser.CicloContext,0)


        def llamada(self):
            return self.getTypedRuleContext(PequePatitoParser.LlamadaContext,0)


        def imprime(self):
            return self.getTypedRuleContext(PequePatitoParser.ImprimeContext,0)


        def getRuleIndex(self):
            return PequePatitoParser.RULE_estatuto

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEstatuto" ):
                listener.enterEstatuto(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEstatuto" ):
                listener.exitEstatuto(self)
